--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,5 +23,9 @@ services:
         resource: '../src/EntityListener/'
         tags: ['doctrine.orm.entity_listener']
 
+    App\EntityListener\LogoutListener:
+        tags:
+            - { name: kernel.entity_listener, event: Symfony\Component\Security\Http\Event\LogoutEvent }
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
